# hugh-data

./: CMakeLists.txt  README.rst
cmake/: HUGH_DATA_SetupVariables.cmake
share/hugh/: CMakeLists.txt
share/hugh/data/: CMakeLists.txt  README.rst
share/hugh/data/mcguire/: CMakeLists.txt  README.rst
share/hugh/data/test/: CMakeLists.txt  README.rst
